--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,7 @@ img {
 ._message {
     padding: 5px 10px;
     border-radius: 5px;
-    max-width: 350px;
+    max-width: 465px;
     margin: 5px 20px;
     display: flex;
     flex-wrap: nowrap;
@@ -194,10 +194,10 @@ img {
 }
 
 ._date {
-    font-size: 8px;
+    font-size: 6px;
     display: flex;
     align-items: end;
-    margin: 0 5px 0 5px;
+    margin: 0 5px;
 }
 
 
